# CRATER-engine

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
models/: cube.gltf
shaders/: basic.slang  skybox.slang
skybox/: StandardCubeMap.ktx2  cubemap_etc1s.ktx2  cubemap_rgba32_linear.ktx2  grass.ktx2  grass2.ktx2  grasslands_sunset.ktx2
src/: engineTypes.h  main.cpp
src/Core/: engine.cpp  engine.h  logger.h  window.cpp  window.h
src/Renderer/: Device.cpp  Device.h  renderer.cpp  renderer.h  swap_chain.cpp  swap_chain.h  validationLayers.h
src/Scene/: Entity.h  Scene.cpp  Scene.h  System.h  components.h
src/Scene/systems/: camera_system.cpp  camera_system.h
src/graphics/: constants.h
src/graphics/Object/: material.h  mesh.h
src/graphics/Renderer/: Device.cpp  Device.h  descriptor_set.cpp  descriptor_set.h  graphics_pipeline.cpp  graphics_pipeline.h  pipeline_registry.h  renderer.cpp  renderer.h  swap_chain.cpp  swap_chain.h  validationLayers.h  vulkanContext.cpp  vulkanContext.h
src/graphics/Resources/: index_buffer.cpp  index_buffer.h  resource.h  resourceManager.h  resource_manager.h  uniform_buffer.h  vertex.h  vertex_buffer.cpp  vertex_buffer.h
src/graphics/Resources/Object/: material.h  mesh.h  object.h
src/graphics/Resources/buffers/: index_buffer.cpp  index_buffer.h  resource_manager.h  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/graphics/Resources/models/: model.cpp  model.h
src/graphics/Resources/shaders/: embedded_shaders.h  shader.cpp  shader.h  shader_compile.cpp  shader_compile.h
src/graphics/Resources/textures/: texture.cpp  texture.h  texture_utilities.h
src/graphics/Resources/vma/: vma_allocator.h  vma_buffer.h
src/imgui/: editor.cpp  editor.h  imguiVulkan.cpp  imguiVulkan.h
